--- a/index.html
+++ b/index.html
@@ -24,7 +24,56 @@
         
     </header>
     <main>
-        
+        <section>
+            <div>
+                <img class="pos-top-left" src="./img/1.webp" alt="">
+                <br>
+                <span class="brand">Levi's</span>
+                <br>
+                <strong>RELAXED FIT TEE UNISEX</strong>
+                <span>&hearts;</span>
+            </div>
+            <div>
+                <img class="pos-top-center" src="./img/2.webp" alt="">
+                <br>
+                <span class="brand">Guess</span>
+                <br>
+                <strong>ROSES TEE</strong>
+                <span>&hearts;</span>
+            </div>
+            <div>
+                <img class="pos-top-right" src="./img/3.webp" alt="">
+                <br>
+                <span class="brand">Come Zucchero Filato</span>
+                <br>
+                <strong>VOGLIA DI COLORI PASTELLO</strong>
+                <span>&hearts;</span>
+            </div>
+            <div>
+                <img class="pos-bottom-left" src="./img/4.webp" alt="">
+                <br>
+                <span class="brand">Levi's</span>
+                <br>
+                <strong>TEE UNISEX</strong>
+                <span>&hearts;</span>
+            </div>
+            <div>
+                <img class="pos-bottom-center" src="./img/5.webp" alt="">
+                <br>
+                <span class="brand">Maya Deluxe</span>
+                <br>
+                <strong>STRIPE BODICE</strong>
+                <span>&hearts;</span>
+            </div>
+            <div>
+                <img class="pos-bottom-center" src="./img/6.webp" alt="">
+                <br>
+                <span class="brand">Esprit</span>
+                <br>
+                <strong>MAGLIONE - BLACK</strong>
+                <span>&hearts;</span>
+            </div>
+        </section>
     </main>
     <footer>
 
