add sale and heart

--- a/index.html
+++ b/index.html
@@ -26,52 +26,78 @@
     <main>
         <section>
             <div>
-                <img class="pos-top-left" src="./img/1.webp" alt="">
-                <br>
+                <div class="img-container">
+                    <img class="pos-top-left" src="./img/1.webp" alt="">
+                    <span class="heart">&hearts;</span>
+                    <span class="sale">-50%</span>
+                </div>
                 <span class="brand">Levi's</span>
                 <br>
                 <strong>RELAXED FIT TEE UNISEX</strong>
-                <span>&hearts;</span>
+                <br>
+                <span class="price">14,99&euro;</span>
+                <del>29,99&euro;</del>
             </div>
             <div>
-                <img class="pos-top-center" src="./img/2.webp" alt="">
-                <br>
+                <div class="img-container">
+                    <img class="pos-top-center" src="./img/2.webp" alt="">
+                    <span class="heart">&hearts;</span>
+                    <span class="sale">-30%</span>
+                </div>
                 <span class="brand">Guess</span>
                 <br>
                 <strong>ROSES TEE</strong>
-                <span>&hearts;</span>
+                <br>
+                <span class="price">20,99&euro;</span>
+                <del>29,99&euro;</del>
             </div>
             <div>
-                <img class="pos-top-right" src="./img/3.webp" alt="">
-                <br>
+                <div class="img-container">
+                    <img class="pos-top-right" src="./img/3.webp" alt="">
+                    <span class="heart">&hearts;</span>
+                    <span class="sale">-30%</span>
+                </div>
                 <span class="brand">Come Zucchero Filato</span>
                 <br>
                 <strong>VOGLIA DI COLORI PASTELLO</strong>
-                <span>&hearts;</span>
+                <br>
+                <span class="price">129,99&euro;</span>
+                <del>184,99&euro;</del>
             </div>
             <div>
-                <img class="pos-bottom-left" src="./img/4.webp" alt="">
-                <br>
+                <div class="img-container">
+                    <img class="pos-bottom-left" src="./img/4.webp" alt="">
+                    <span class="heart">&hearts;</span>
+                    <span class="sale">-50%</span>
+                </div>
                 <span class="brand">Levi's</span>
                 <br>
                 <strong>TEE UNISEX</strong>
-                <span>&hearts;</span>
+                <br>
+                <span class="price">14,99&euro;</span>
+                <del>29,99&euro;</del>
             </div>
             <div>
-                <img class="pos-bottom-center" src="./img/5.webp" alt="">
-                <br>
+                <div class="img-container">
+                    <img class="pos-bottom-center" src="./img/5.webp" alt="">
+                    <span class="heart">&hearts;</span>
+                </div>
                 <span class="brand">Maya Deluxe</span>
                 <br>
                 <strong>STRIPE BODICE</strong>
-                <span>&hearts;</span>
+                <br>
+                <span class="price">99,99&euro;</span>
             </div>
             <div>
-                <img class="pos-bottom-center" src="./img/6.webp" alt="">
-                <br>
+                <div class="img-container">
+                    <img class="pos-bottom-center" src="./img/6.webp" alt="">
+                    <span class="heart">&hearts;</span>
+                </div>
                 <span class="brand">Esprit</span>
                 <br>
                 <strong>MAGLIONE - BLACK</strong>
-                <span>&hearts;</span>
+                <br>
+                <span class="price">29,99&euro;</span>
             </div>
         </section>
     </main>
