--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
                 <div class="img-container">
                     <img class="pos-top-left" src="./img/1.webp" alt="">
                     <span class="heart">&hearts;</span>
-                    <span class="sale">-50%</span>
+                    <div class="sale-container">
+                        <span class="sale">-50%</span>
+                        <span class="sostenibility">Sostenibilità</span>
+                    </div>
                 </div>
                 <span class="brand">Levi's</span>
                 <br>
@@ -42,7 +45,9 @@
                 <div class="img-container">
                     <img class="pos-top-center" src="./img/2.webp" alt="">
                     <span class="heart">&hearts;</span>
-                    <span class="sale">-30%</span>
+                    <div class="sale-container">
+                        <span class="sale">-30%</span>
+                    </div>
                 </div>
                 <span class="brand">Guess</span>
                 <br>
@@ -55,7 +60,9 @@
                 <div class="img-container">
                     <img class="pos-top-right" src="./img/3.webp" alt="">
                     <span class="heart">&hearts;</span>
-                    <span class="sale">-30%</span>
+                    <div class="sale-container">
+                        <span class="sale">-30%</span>
+                    </div>
                 </div>
                 <span class="brand">Come Zucchero Filato</span>
                 <br>
@@ -68,7 +75,10 @@
                 <div class="img-container">
                     <img class="pos-bottom-left" src="./img/4.webp" alt="">
                     <span class="heart">&hearts;</span>
-                    <span class="sale">-50%</span>
+                    <div class="sale-container">
+                        <span class="sale">-50%</span>
+                        <span class="sostenibility">Sostenibilità</span>
+                    </div>
                 </div>
                 <span class="brand">Levi's</span>
                 <br>
@@ -92,6 +102,9 @@
                 <div class="img-container">
                     <img class="pos-bottom-center" src="./img/6.webp" alt="">
                     <span class="heart">&hearts;</span>
+                    <div class="sale-container">
+                        <span class="sostenibility">Sostenibilità</span>
+                    </div>
                 </div>
                 <span class="brand">Esprit</span>
                 <br>
