--- a/index.html
+++ b/index.html
@@ -115,7 +115,24 @@
         </section>
     </main>
     <footer>
-
+        <div>
+            <h3>Boolando s.r.l</h3>
+            <div>
+                <a>Informazioni legali</a>
+                <a>Informativa sulla privacy</a>
+                <a>Diritto di Recesso</a>
+            </div>
+        </div>
+        <div>
+            <h4>Trovaci anche su</h4>
+            <div class="social">
+                <i class="fa-brands fa-square-twitter"></i>
+                <i class="fa-brands fa-square-facebook"></i>
+                <i class="fa-brands fa-square-instagram"></i>
+                <i class="fa-brands fa-square-pinterest"></i>
+                <i class="fa-brands fa-square-youtube"></i>
+            </div>
+        </div>
     </footer>
 
 </body>
