--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <footer>
         <div>
             <h3>Boolando s.r.l</h3>
-            <div>
+            <div class="info">
                 <a>Informazioni legali</a>
                 <a>Informativa sulla privacy</a>
                 <a>Diritto di Recesso</a>
